--- a/Source/Runtime.Events.Store.MongoDB.csproj
+++ b/Source/Runtime.Events.Store.MongoDB.csproj
@@ -5,7 +5,9 @@
     <AssemblyName>Dolittle.Runtime.Events.Store.MongoDB</AssemblyName>
     <RootNamespace>Dolittle.Runtime.Events.Store.MongoDB</RootNamespace>
   </PropertyGroup>
-  
+
+  <Import Project="../Build/MSBuild/default.props"></Import>
+
   <ItemGroup>
     <PackageReference  Include="Dolittle.Runtime.Events.Store" Version="2.0.0-*" />
   </ItemGroup>
