--- a/Source/Runtime.Events.Store.MongoDB.csproj
+++ b/Source/Runtime.Events.Store.MongoDB.csproj
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference  Include="Dolittle.Runtime.Events.Store" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.PropertyBags" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.Artifacts" Version="2.0.0-*" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.7.0"/>
