Don’t disable local packages

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -5,6 +5,9 @@
     <clear />
     <add key="local" value="%HOME%/.nuget/packages" />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <!-- <add key="dolittle-ci" value="https://www.myget.org/F/dolittle/api/v3/index.json" /> -->
+    <add key="dolittle-ci" value="https://www.myget.org/F/dolittle/api/v3/index.json" />
   </packageSources>
+  <disabledPackageSources>
+    <!--<add key="local" value="false" />-->
+  </disabledPackageSources>
 </configuration>
