--- a/Specifications/Runtime.Events.Store.Specs.csproj
+++ b/Specifications/Runtime.Events.Store.Specs.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
  <ItemGroup>
-    <PackageReference Include="Dolittle.Applications" Version="2.0.0-*" />
+    <PackageReference Include="Dolittle.Artifacts" Version="2.0.0-*" />
   </ItemGroup>
 
   <ItemGroup>
