--- a/Source/Runtime.Events.MongoDB.csproj
+++ b/Source/Runtime.Events.MongoDB.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Dolittle.Runtime.Events.Store.MongoDB</AssemblyName>
-    <RootNamespace>Dolittle.Runtime.Events.Store.MongoDB</RootNamespace>
+    <AssemblyName>Dolittle.Runtime.Events.MongoDB</AssemblyName>
+    <RootNamespace>Dolittle.Runtime.Events.MongoDB</RootNamespace>
   </PropertyGroup>
 
   <Import Project="../Build/MSBuild/default.props"></Import>
 
   <ItemGroup>
-    <PackageReference  Include="Dolittle.Runtime.Events.Store" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.Runtime.Events" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.PropertyBags" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
