--- a/NuGet.Config
+++ b/NuGet.Config
@@ -8,6 +8,6 @@
     <add key="dolittle-ci" value="https://www.myget.org/F/dolittle/api/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
-    <!--<add key="local" value="false" />-->
+    <add key="local" value="false" />
   </disabledPackageSources>
 </configuration>
