--- a/Source/Runtime.Events.MongoDB.csproj
+++ b/Source/Runtime.Events.MongoDB.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference  Include="Dolittle.Runtime.Events" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.Resources.Configuration" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.PropertyBags" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
