--- a/Source/Runtime.Events.MongoDB.csproj
+++ b/Source/Runtime.Events.MongoDB.csproj
@@ -14,6 +14,7 @@
     <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.PropertyBags" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.Time" Version="2.0.0-*" />
     <PackageReference  Include="Dolittle.Artifacts" Version="2.0.0-*" />
   </ItemGroup>
   <ItemGroup>
