--- a/Specifications/Runtime.Events.MongoDB.Specs.csproj
+++ b/Specifications/Runtime.Events.MongoDB.Specs.csproj
@@ -17,6 +17,7 @@
 
  <ItemGroup>
     <PackageReference Include="Dolittle.Artifacts" Version="2.0.0-*" />
+    <PackageReference Include="Dolittle.Time" Version="2.0.0-*" />
   </ItemGroup>
 
   <ItemGroup>
