--- a/Source/Runtime.Events.MongoDB.csproj
+++ b/Source/Runtime.Events.MongoDB.csproj
@@ -9,13 +9,13 @@
   <Import Project="../Build/MSBuild/default.props"></Import>
 
   <ItemGroup>
-    <PackageReference  Include="Dolittle.Runtime.Events" Version="2.0.0-*" />
-    <PackageReference  Include="Dolittle.ResourceTypes.Configuration" Version="2.0.0-*" />
-    <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
-    <PackageReference  Include="Dolittle.PropertyBags" Version="2.0.0-*" />
-    <PackageReference  Include="Dolittle.Concepts" Version="2.0.0-*" />
-    <PackageReference  Include="Dolittle.Time" Version="2.0.0-*" />
-    <PackageReference  Include="Dolittle.Artifacts" Version="2.0.0-*" />
+    <PackageReference  Include="Dolittle.Runtime.Events" Version="2.*" />
+    <PackageReference  Include="Dolittle.ResourceTypes.Configuration" Version="2.*" />
+    <PackageReference  Include="Dolittle.Concepts" Version="2.*" />
+    <PackageReference  Include="Dolittle.PropertyBags" Version="2.*" />
+    <PackageReference  Include="Dolittle.Concepts" Version="2.*" />
+    <PackageReference  Include="Dolittle.Time" Version="2.*" />
+    <PackageReference  Include="Dolittle.Artifacts" Version="2.*" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.7.0"/>
