--- a/NuGet.Config
+++ b/NuGet.Config
@@ -5,5 +5,6 @@
     <clear />
     <add key="local" value="%HOME%/.nuget/packages" />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="MyGet" value="https://www.myget.org/F/dolittle-framework/api/v3/index.json"/>
   </packageSources>
 </configuration>
