--- a/Source/Runtime.Events.MongoDB.csproj
+++ b/Source/Runtime.Events.MongoDB.csproj
@@ -7,17 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dolittle.Runtime.Events" Version="4.*" />
-    <PackageReference Include="Dolittle.ResourceTypes.Configuration" Version="4.*" />
-    <PackageReference Include="Dolittle.Concepts" Version="4.*" />
-    <PackageReference Include="Dolittle.PropertyBags" Version="4.*" />
-    <PackageReference Include="Dolittle.Concepts" Version="4.*" />
-    <PackageReference Include="Dolittle.Time" Version="4.*" />
-    <PackageReference Include="Dolittle.Artifacts" Version="4.*" />
-    <PackageReference Include="MongoDB.Bson" Version="2.7.0"/>
-    <PackageReference Include="MongoDB.Driver" Version="2.7.0"/>
-    <PackageReference Include="MongoDB.Driver.Core" Version="2.7.0"/>
-    <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.1"/>
+    <PackageReference Include="Dolittle.Runtime.Events.Store" Version="4.*" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.1"/>
   </ItemGroup>
 </Project>
 
