--- a/specs.props
+++ b/specs.props
@@ -1,6 +1,8 @@
 <Project>
+    <Import Project="versions.props"/>
+    
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
