--- a/Source/Runtime.Events.MongoDB.csproj
+++ b/Source/Runtime.Events.MongoDB.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dolittle.Runtime.Events.Store" Version="4.*" />
+    <PackageReference Include="Dolittle.Runtime.Events.Processing" Version="$(RuntimeVersion)" />
+    <PackageReference Include="Dolittle.Runtime.Events.Store" Version="$(RuntimeVersion)" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.1"/>
   </ItemGroup>
 </Project>
